Sat Feb 15 20:09:58 1997  Andreas Kupries  <aku@bluepeak.westend.com>

	* INSTALL: updated to contain info for compilation on Windows as
	  well. 

	* Added 'makefile.vc' for compilation on Windows. The required
	  'pkgIndex.win' is generated by 'PREPARE' from 'pkgIndex.tcl.in'.

	* Rewrote generation of distribution (PREPARE, make-tape).
	  'DESCRIPTION' now central point for version information. The
	  data obtained there is placed into all relevant files at
	  distribution time (README, LSM, ...),

	  Note: 'PREPARE' is an file internal to the package. It contains
	  tcl-code preparing the package for distribution (removing
	  inofficial and/or internal files, manpage generation, ...). It
	  is not part of the distribution however.

Mon Jan 13 22:21:48 1997  Andreas Kupries  <aku@bluepeak.westend.com>

	* INSTALL: updated to reflect new search order and versions.

	* Makefile.in: Removed now superfluous variables.

	* configure.in: don't use -lsocket, -lm. Why there they included
	  anyway ?

	* configure.in (line 259): don't bother with -ltclX.Y if not
	  running under AIX.

	* configure.in: lowest possible tcl version is 7.6, not 7.5. Added
	  recognition of 8.0 versions.

	* configure.in: changed search order: sibling directories before
	  <prefix> paths. But commandline options overide all.

Thu Dec  5 19:02:06 1996  Andreas Kupries  <aku@bluepeak.westend.com>

	* PREPARE: updated to exclude the new directories (see below) from
	  distribution.

	* added internal directories 'patches' and 'mails'.

	* configure.in (AC_OUTPUT): adapted to last change, done by patch,
	  see below.

	* pkgIndex.tcl.in: former pkgIndex.in, renamed by patch, see below.

	* Makefile.in (LIB_RUNTIME_DIR): added by patch, see below.

	* got a patch from Jan Nijtmans <nijtmans@nici.kun.nl>.

Fri Nov 15 22:45:04 1996  Andreas Kupries  <aku@bluepeak.westend.com>

	* Extracted memory channel code from trans-patch and made it a
	  separate library.
