@@ -1,5 +1,8 @@
 Sat Feb 15 20:09:58 1997  Andreas Kupries  <aku@bluepeak.westend.com>
 
+	* memchan.c: integrated changes required to compile cleanly on
+	  windows. 
+
 	* INSTALL: updated to contain info for compilation on Windows as
 	  well. 
 
